--- a/cluster/crds/apiextensions.crossplane.io_compositions.yaml
+++ b/cluster/crds/apiextensions.crossplane.io_compositions.yaml
@@ -55,25 +55,108 @@ spec:
                 - kind
                 type: object
               functions:
-                description: Functions is list of XRM functions that will be used
-                  when a composite resource referring to this composition is created.
-                  At least one of resources and functions must be specififed. If both
-                  are specified the resources will be rendered first, then passed
-                  to the functions for further processing.
+                description: Functions is list of Composition Functions that will
+                  be used when a composite resource referring to this composition
+                  is created. At least one of resources and functions must be specified.
+                  If both are specified the resources will be rendered first, then
+                  passed to the functions for further processing.
                 items:
-                  description: 'A Function represents an XRM function. TODO(negz):
-                    Formalize the XRM function spec, which will be a superset of the
-                    KRM function spec (mostly due to Crossplane specific annotations)
-                    per https://github.com/crossplane/crossplane/pull/2886'
+                  description: A Function represents a Composition Function.
                   properties:
+                    config:
+                      description: Config is an optional, arbitrary Kubernetes resource
+                        (i.e. a resource with an apiVersion and kind) that will be
+                        passed to the Composition Function as the 'config' block of
+                        its FunctionIO.
+                      type: object
+                      x-kubernetes-embedded-resource: true
+                      x-kubernetes-preserve-unknown-fields: true
                     container:
                       description: Container configuration of this function.
                       properties:
                         image:
                           description: Image specifies the OCI image in which the
-                            XRM function is packaged. The image should include an
-                            entrypoint that reads a ResourceList from stdin and emits
-                            a potentially mutated ResourceList to stdout.
+                            function is packaged. The image should include an entrypoint
+                            that reads a FunctionIO from stdin and emits it, optionally
+                            mutated, to stdout.
+                          type: string
+                        network:
+                          description: Network configuration for the Composition Function.
+                          properties:
+                            policy:
+                              default: Isolated
+                              description: Policy specifies the network policy under
+                                which the Composition Function will run. Defaults
+                                to 'Isolated' - i.e. no network access. Specify 'Runner'
+                                to allow the function the same network access as its
+                                runner.
+                              enum:
+                              - Isolated
+                              - Runner
+                              type: string
+                          type: object
+                        packagePullPolicy:
+                          default: IfNotPresent
+                          description: ImagePullPolicy defines the pull policy for
+                            the function image.
+                          type: string
+                        packagePullSecrets:
+                          description: ImagePullSecrets are named secrets in the same
+                            namespace that can be used to fetch packages from private
+                            registries.
+                          items:
+                            description: LocalObjectReference contains enough information
+                              to let you locate the referenced object inside the same
+                              namespace.
+                            properties:
+                              name:
+                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                  TODO: Add other useful fields. apiVersion, kind,
+                                  uid?'
+                                type: string
+                            type: object
+                          type: array
+                        resources:
+                          description: Resources that may be used by the Composition
+                            Function.
+                          properties:
+                            limits:
+                              description: Limits specify the maximum compute resources
+                                that may be used by the Composition Function.
+                              properties:
+                                cpu:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  default: 100m
+                                  description: CPU, in cores. (500m = .5 cores)
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                memory:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  default: 128Mi
+                                  description: Memory, in bytes. (500Gi = 500GiB =
+                                    500 * 1024 * 1024 * 1024)
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                              type: object
+                          type: object
+                        runner:
+                          description: Runner configuration for the Composition Function.
+                          properties:
+                            endpoint:
+                              default: unix:///@crossplane/fn/default.sock
+                              description: Endpoint specifies how and where Crossplane
+                                should reach the runner it uses to invoke containerized
+                                Composition Functions.
+                              type: string
+                          type: object
+                        timeout:
+                          default: 20s
+                          description: Deadline after which the Composition Function
+                            will be killed.
                           type: string
                       required:
                       - image
